my portfolio html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-      <h1>portfolio</h1>
+<body> 
+    <header>
+        <h1>Portfolio</h1>
+        <main>
+            <ul>
+                <p>Welcome to my digital space — where code meets creativity!
+I'm passionate about building real-world projects, exploring the backend of the web, and constantly learning new technologies. whether its logic, APIs, or algorithms — I love bringing ideas to life through code.                        
+<br>
+I am excited to share my journey with you, and I hope to inspire others to embrace the power of education and technology.</p>
+<p>Here I showcase my projects, skills, and educational journey. Feel free to explore! </p>
+<h2>about me</h2>
+<img src="pfp.jpg" alt="My Picture"  height="200">
+<p>👋
+Hey! I’m Khushmit Bokre, a curious mind and passionate Class 11 student who's diving deep into the world of tech — especially backend development.
+
+From writing my first lines of code in C++ and Python, to building web projects and exploring how the internet really works behind the scenes — I’m all about turning ideas into real, working solutions.
+
+💡 I believe learning never stops. Whether it’s debugging a tricky piece of logic, exploring new frameworks, or contributing to open-source, I’m always up for the challenge.
+
+Outside of code, you’ll find me experimenting with tech, solving problems, or learning something new every day. My goal?
+To build cool stuff, grow with every project, and one day make a real impact in the world of technology.
+
+Let’s connect, collaborate, and create something awesome!</p>
+
+
+                
+                    <li><a href="index.html">Home</a></li>
+                    <br>
+                <li><a href="Education.html" target="_main">Education</a></li>
+                <br>
+                <li><a href="Skills.html" target="_main">Skill</a></li>
+                 <br>
+                <li><a href="project.html" target="_main">Project</a></li>
+                 <br>
+                <li><a href="Contact.html"target="_main">Contact</a></li>
+                 <br>
+            </ul>
+        <main>
+      
+    </header>
 </body>
 </html>
