my portfolio html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Let’s connect, collaborate, and create something awesome!</p>
                  <br>
             </ul>
         <main>
-      
-    </header>
+      +
+      -*    </header>
 </body>
 </html>
