my portfolio html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ I'm passionate about building real-world projects, exploring the backend of the 
 <br>
 I am excited to share my journey with you, and I hope to inspire others to embrace the power of education and technology.</p>
 <p>Here I showcase my projects, skills, and educational journey. Feel free to explore! </p>
-<h2>about me</h2>
+<h2>About me</h2>
 <img src="pfp.jpg" alt="My Picture"  height="200">
 <p>👋
 Hey! I’m Khushmit Bokre, a curious mind and passionate Class 11 student who's diving deep into the world of tech — especially backend development.
