--- a/index.html
+++ b/index.html
@@ -3,15 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+     <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://unpkg.com/lucide@latest"></script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body> 
+
+
+     <!-- Navbar -->
+  <header class="navbar">
+    <div class="logo">
+       <a href="#KHUSHMIT"></a> <i class=" fa-solid fa-user-tie"> </i>
+        KHUSHMIT</div>
+
+    <input type="checkbox" id="menu-toggle" />
+    <label for="menu-toggle" class="hamburger"><i class="fas fa-bars"></i></label>
+
+    <nav class="nav-links">
+      <a href="#home"><i class="fas fa-house"></i> Home</a>
+      <a href="#about"><i class="fas fa-user"></i> About</a>
+      <a href="#Education"><i class="fa-solid fa-graduation-cap"></i> Education</a>
+      <a href="#skills"><i class="fas fa-cogs"></i> Skills</a>
+
+      <div class="dropdown">
+        <input type="checkbox" id="dropdown-toggle" />
+        <label for="dropdown-toggle" class="drop-label"><i class="fas fa-folder-open"></i> Projects</label>
+        <div class="dropdown-menu">
+          <a href="#project1">Project 1</a>
+          <a href="#project2">Project 2</a>
+        </div>
+      </div>
+
+      <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
+    </nav>
+
+  </header>
+  <main>
+    <section id="home"><h1> <p1> Welcome to my digital space — where code meets creativity!
+I'm passionate about building real-world projects, exploring the backend of the web, and constantly learning new technologies. whether its logic, APIs, or algorithms.</p1>
+<br><br>
+<p2>I am excited to share my journey with you, and I hope to inspire others to embrace the power of education and technology.</p2>
+<br><br>
+<p3>Here I showcase my projects, skills, and educational journey. Feel free to explore!</p3> </h1></section>
+    <section id="about"><h1>About</h1></section>
+    <section id="Education"><h1>Education</h1></section>
+    <section id="skills"><h1>Skills</h1></section>
+    <section id="project1"><h1>Project 1</h1></section>
+    <section id="project2"><h1>Project 2</h1></section>
+    <section id="contact"><h1>Contact</h1></section>
+  </main>
+
+
+
+
+
     <header>
         <h1>Portfolio</h1>
         <main>
             <ul>
-                <p>Welcome to my digital space — where code meets creativity!
-I'm passionate about building real-world projects, exploring the backend of the web, and constantly learning new technologies. whether its logic, APIs, or algorithms — I love bringing ideas to life through code.                        
+                    <p>Welcome to my digital space — where code meets creativity!
+    I'm passionate about building real-world projects, exploring the backend of the web, whether its logic, APIs, or algorithms.
 <br>
 I am excited to share my journey with you, and I hope to inspire others to embrace the power of education and technology.</p>
 <p>Here I showcase my projects, skills, and educational journey. Feel free to explore! </p>
@@ -43,7 +97,6 @@ Let’s connect, collaborate, and create something awesome!</p>
                  <br>
             </ul>
         <main>
-      +
-      -*    </header>
+   </header>
 </body>
 </html>
