--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="navbar">
     <div class="logo">
        <a href="#KHUSHMIT"></a> <i class=" fa-solid fa-user-tie"> </i>
-        KHUSHMIT</div>
+        KHUSHMEET</div>
 
     <input type="checkbox" id="menu-toggle" />
     <label for="menu-toggle" class="hamburger"><i class="fas fa-bars"></i></label>
@@ -42,14 +42,41 @@
 
   </header>
   <main>
-    <section id="home"><h1> <p1> Welcome to my digital space — where code meets creativity!
-I'm passionate about building real-world projects, exploring the backend of the web, and constantly learning new technologies. whether its logic, APIs, or algorithms.</p1>
+    <section id="home"><h1> <p1>
+      Here, creativity meets code & backend ideas come alive! <!--  Welcome to my digital space — where code meets creativity! 
+      <br>
+      I'm passionate about building real-world projects, exploring the backend of the web,whether its logic, APIs, or algorithms.  --></p1>
 <br><br>
 <p2>I am excited to share my journey with you, and I hope to inspire others to embrace the power of education and technology.</p2>
 <br><br>
-<p3>Here I showcase my projects, skills, and educational journey. Feel free to explore!</p3> </h1></section>
-    <section id="about"><h1>About</h1></section>
-    <section id="Education"><h1>Education</h1></section>
+<p3> I showcase my projects, skills, and educational journey. Feel free to explore!</p3> </h1></section>
+    <section id="about"><h1>
+      <p4>
+        About me</p4>
+         
+        <img src="pfp.jpg" alt="My Picture"  height="400px" width="400px">
+      
+      <p5>
+ 👋Hey there,<br>I’m Khushmeet Bokre, a curious mind and passionate Class 11 student <br>
+           who's diving deep into the world of tech — especially backend development.<br>
+          From writing lines of code in C++ and Python, to building web <br> 
+          projects and exploring how the internet really works behind the scenes. <br> <br>
+           I’m all about turning ideas into real, working solutions.<br>
+           About building smart, scalable, and user-centric digital experiences.<br>
+           Outside of code, you will find me experimenting with <br> tech, solving problems, or learning something new every day. 
+          <button class="btn btn-background-slide" onclick="location.href='#contact'" > Let’s connect <div class="btn-background-slide--blue btn-background-slide-bg"></div> </button>
+      </p5>
+    </h1></section>
+
+
+    <section id="Education"><h1>
+      <p6>Education</p6> <br><br>
+      <p7> 🎓 My Learning Journey
+Education isn't just about textbooks — it's about curiosity, growth, and real-world impact.
+I'm currently a Class 11 student, diving deep into the world of technology and problem-solving.</p7>
+
+
+    </h1></section>
     <section id="skills"><h1>Skills</h1></section>
     <section id="project1"><h1>Project 1</h1></section>
     <section id="project2"><h1>Project 2</h1></section>
@@ -64,21 +91,9 @@ I'm passionate about building real-world projects, exploring the backend of the 
         <h1>Portfolio</h1>
         <main>
             <ul>
-                    <p>Welcome to my digital space — where code meets creativity!
-    I'm passionate about building real-world projects, exploring the backend of the web, whether its logic, APIs, or algorithms.
-<br>
-I am excited to share my journey with you, and I hope to inspire others to embrace the power of education and technology.</p>
-<p>Here I showcase my projects, skills, and educational journey. Feel free to explore! </p>
 <h2>About me</h2>
 <img src="pfp.jpg" alt="My Picture"  height="200">
-<p>👋
-Hey! I’m Khushmit Bokre, a curious mind and passionate Class 11 student who's diving deep into the world of tech — especially backend development.
-
-From writing my first lines of code in C++ and Python, to building web projects and exploring how the internet really works behind the scenes — I’m all about turning ideas into real, working solutions.
-
-💡 I believe learning never stops. Whether it’s debugging a tricky piece of logic, exploring new frameworks, or contributing to open-source, I’m always up for the challenge.
-
-Outside of code, you’ll find me experimenting with tech, solving problems, or learning something new every day. My goal?
+<p>👋 My goal?
 To build cool stuff, grow with every project, and one day make a real impact in the world of technology.
 
 Let’s connect, collaborate, and create something awesome!</p>
