--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
 
         <h4>Feel free to reach out to me through the following:</h4>
          
-        <a href="https://www.linkedin.com/in/khushmit-bokre-3a301a370/" target="_blank">LinkedIn</a>
+        <a href="https://www.linkedin.com/in/khushmit-bokre-3a301a370/" >LinkedIn</a>
         <br><br>
         <a href="https://github.com/khushmit99" target="_blank">GitHub</a>
         <br><br>
