--- a/index.html
+++ b/index.html
@@ -117,8 +117,24 @@ I am constantly exploring new tech, building projects, and sharpening my Skills.
           <p16>Feel free to reach out to me through the following:</p16>
           <br><br>
           <p17>
-        <i class="fa-brands fa-linkedin"></i><a href="https://www.linkedin.com/in/khushmit-bokre-3a301a370/" target="_blank" ></a>
-          </p17>
+      <a href="https://www.linkedin.com/in/khushmit-bokre-3a301a370/" target="_blank" ><i class="fa-brands fa-linkedin"></i></a>
+          </p17> 
+          <p18>
+      <a href="https://www.instagram.com/khushmit99?igsh=a2hyNTZqY21wdnIyZ2d3V5cG9kZzJmY3p1bW5iY2xqZ3N4dG9nYjV0aG5hZzQ" target="_blank" ><i class="fa-brands fa-instagram"></i></a>
+          </p18> 
+
+          <p19>
+      <a href="https://github.com/khushmit99" target="_blank" ><i class="fa-brands fa-github"></i></a>
+          </p19> 
+
+          <!-- <p20>
+      <a href="khushbokre@gmail.com" target="_blank" ><i class="fa-regular fa-envelope"></i></a>
+          </p20>  -->
+           
+
+           <a href="https://www.linkedin.com/in/khushmit-bokre-3a301a370/" target="_blank" ><button class="button-85" role="button" >LET's CONNECT </button>
+</a>
+
 
 
       </h1></section>
