--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
     </nav>
 
   </header>
-  <main>
-    <section id="home"><h1> <p1>
+  <main class="responsive">
+    
+    <section id="home"><h1> <p1 >
       Here, Creativity Meets Code <br> <p2> &</p2> <br> Backend Ideas Came Alive.</p1>
 <br><br>
 <p3>Here I showcase my projects, skills, and educational journey.<br> <pf> .Feel free to explore. </pf>  </p3> </h1></section>
