--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@ For me, Class 11th is more than a grade — it’s a launchpad to create, innova
 
       </h1></section>
   </main>
-
+  <footer>
+    <p>© 2025 | All Rights Reserved</p>
+  </footer>
+    
 </body>
 </html>
