--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="siklls.css">
+    <link rel="stylesheet" href="skills.css">
+    <link rel="stylesheet" href="Education.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
      <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
@@ -74,7 +75,7 @@
 
     <!--  class="education" -->
 
-    <section id="Education"><h1>
+    <!-- <section id="Education"><h1>
   
       <p6>Education</p6> <br><br>
       <p  class="education" >
@@ -87,7 +88,65 @@ I’ve completed C++ and Python courses from Universal Informatics, Indore, buil
 <p class="education">
 For me, Class 11th is more than a grade — it’s a launchpad to create, innovate, and inspire.
 </p>
-    </h1></section>
+    </h1></section> -->
+      <h1><section class="education-section" id="Education">
+    <h1 class="section-title">🎓 Education</h1>
+    <p class="section-subtitle">
+      A glimpse of where logic met creativity and curiosity shaped skill.
+    </p>
+
+    <div class="education-row">
+      <div class="edu-card" data-tilt>
+        <div class="edu-icon">📘</div>
+        <h2>Academic</h2>
+        <p class="edu-year">Class 11th Student</p>
+        <p>Exploring computer science and mathematics — the fuel for my logical and creative growth.</p>
+        <div class="edu-tags">
+          <span>#Mathematics</span>
+          <span>#ComputerScience</span>
+          <span>#Logic</span>
+        </div>
+      </div>
+
+      <div class="edu-card" data-tilt>
+        <div class="edu-icon">🏫</div>
+        <h2>School</h2>
+        <p class="edu-year">Oshin International School, Indore</p>
+        <p>Where curiosity met discipline, building the foundation for continuous learning.</p>
+        <div class="edu-tags">
+          <span>#STEM</span>
+          <span>#Discipline</span>
+          <span>#TeamProjects</span>
+        </div>
+      </div>
+
+      <div class="edu-card" data-tilt>
+        <div class="edu-icon">💻</div>
+        <h2>Programming Journey</h2>
+        <p class="edu-year">Universal Informatics, Indore</p>
+        <p>Learned structured programming, problem-solving, and the elegance of clean code.</p>
+        <div class="edu-tags">
+          <span>#C++</span>
+          <span>#Python</span>
+          <span>#OOP</span>
+        </div>
+      </div>
+
+      <div class="edu-card" data-tilt>
+        <div class="edu-icon">🚀</div>
+        <h2>Vision Ahead</h2>
+        <p class="edu-year">Learning by Building</p>
+        <p>Transforming ideas into reality through projects that blend logic and creativity.</p>
+        <div class="edu-tags">
+          <span>#WebDev</span>
+          <span>#Backend</span>
+          <span>#Fontend</span>
+        </div>
+      </div>
+    </div>
+  </section></h1>
+  
+  <script src="script.js"></script>
 
 
 <section id="skills" class="skills-wrap">
@@ -189,9 +248,9 @@ For me, Class 11th is more than a grade — it’s a launchpad to create, innova
 
       </h1></section>
   </main>
-  <footer>
+  <!-- <footer>
     <p>© 2025 | All Rights Reserved</p>
-  </footer>
+  </footer> -->
     
 </body>
 </html>
